force-app/main/default/objects/Organisateur__c/Organisateur__c.object-meta.xml
<CustomObject>
    <label>Interlocuteur</label>
    <nameField>
        <label>Nom de la société ou association</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interlocuteurs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>