force-app/main/default/objects/Organisateur__c/fields/Code_Forme_Juridique__c.field-meta.xml
<CustomField>
    <fullName>Code_Forme_Juridique__c</fullName>
    <label>Code Forme Juridique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>