force-app/main/default/objects/Organisateur__c/fields/Libelle_Forme_Juridique__c.field-meta.xml
<CustomField>
    <fullName>Libelle_Forme_Juridique__c</fullName>
    <label>Libelle Forme Juridique</label>
    <length>80</length>
    <type>Text</type>
</CustomField>