force-app/main/default/objects/Organisateur__c/fields/PartyId__c.field-meta.xml
<CustomField>
    <fullName>PartyId__c</fullName>
    <label>PartyId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>