force-app/main/default/objects/Organisateur__c/fields/refclient__c.field-meta.xml
<CustomField>
    <fullName>refclient__c</fullName>
    <externalId>true</externalId>
    <label>Référence Client</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>