force-app/main/default/objects/Organisateur__c/fields/Search_compte__c.field-meta.xml
<CustomField>
    <fullName>Search_compte__c</fullName>
    <formula>refclient__c &amp; &quot;, &quot; &amp; Ville__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search_compte</label>
    <type>Text</type>
</CustomField>