force-app/main/default/objects/Organisateur__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ville__c</columns>
    <columns>CP__c</columns>
    <columns>refclient__c</columns>
    <columns>Libelle_Forme_Juridique__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>